# LLM-scCurator

./: .dockerignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-pr.yml  docker.yml  docs.yml  pypi-release.yml
benchmarks/: __init__.py  caf_config.py  cd4_config.py  cd8_config.py  evaluate_all.py  gt_mappings.py  hierarchical_scoring.py  mouse_b_config.py  scorer_caf.py
docker/: Dockerfile  Dockerfile.full  Dockerfile.lite  docker-compose.yml
docs/: api-reference.md  concepts.md  getting-started.md  index.md  requirements.txt  tutorials.md  user-guide.md
docs/stylesheets/: extra.css
docs/tutorials/: local_quickstart_approved_ai_workflow.html  local_quickstart_ollama.html  reticulate.md  run_llm_sccurator_R_reticulate.html
examples/R/: export_to_curator.R  run_llm_sccurator_R_reticulate.ipynb
examples/colab/: colab_quickstart  colab_quickstart.ipynb  colab_quickstart_R.ipynb  colab_quickstart_openai.ipynb
examples/local/: colab_quickstart_ollama.ipynb  local_quickstart_approved_ai_workflow.ipynb
llm_sc_curator/: __init__.py  backends.py  core.py  masking.py  noise_lists.py  utils.py
llm_sc_curator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paper/: FIGURE_MAP.csv  README.md
paper/config/: benchmarks.yaml  datasets.tsv  params.yaml
paper/notebooks/: 00_export_subsample_brca_msc.ipynb  00_export_subsample_cd4.ipynb  00_export_subsample_cd8.ipynb  00_export_subsample_mouse_b.ipynb  01_brca_msc_gt_qc.ipynb  01_mouse_b_gt_qc.ipynb  (+13 more)
(+61 files in other folders)
